--- a/src/main/resources/com/app/project1/homepage.fxml
+++ b/src/main/resources/com/app/project1/homepage.fxml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.app.project1.HomepageController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.app.project1.HomepageController">
    <children>
-      <HBox alignment="CENTER" prefHeight="70.0" prefWidth="700.0" style="-fx-border-color: #000000;">
+      <HBox alignment="CENTER" prefHeight="51.0" prefWidth="800.0" style="-fx-border-color: #000000;">
          <children>
             <Button fx:id="budgetsBtn" mnemonicParsing="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="BUDGETS">
                <font>
-                  <Font name="Roboto Bold" size="24.0" />
+                  <Font name="Roboto Bold" size="22.0" />
                </font>
                <HBox.margin>
-                  <Insets left="15.0" right="15.0" />
+                  <Insets left="12.0" right="12.0" />
                </HBox.margin>
                <padding>
                   <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
@@ -25,50 +27,71 @@
             </Button>
             <Button fx:id="expensesBtn" mnemonicParsing="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="EXPENSES">
                <font>
-                  <Font name="Roboto Bold" size="24.0" />
+                  <Font name="Roboto Bold" size="22.0" />
                </font>
                <padding>
                   <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                </padding>
                <HBox.margin>
-                  <Insets left="15.0" right="15.0" />
+                  <Insets left="12.0" right="12.0" />
                </HBox.margin>
             </Button>
             <Button fx:id="transBtn" mnemonicParsing="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="TRANSACTIONS">
                <font>
-                  <Font name="Roboto Bold" size="24.0" />
+                  <Font name="Roboto Bold" size="22.0" />
                </font>
                <padding>
                   <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                </padding>
                <HBox.margin>
-                  <Insets left="15.0" right="15.0" />
+                  <Insets left="12.0" right="12.0" />
                </HBox.margin>
             </Button>
             <Button fx:id="settingsBtn" mnemonicParsing="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="SETTINGS">
                <font>
-                  <Font name="Roboto Bold" size="24.0" />
+                  <Font name="Roboto Bold" size="22.0" />
                </font>
                <padding>
                   <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                </padding>
                <HBox.margin>
-                  <Insets left="15.0" right="15.0" />
+                  <Insets left="12.0" right="12.0" />
                </HBox.margin>
+            </Button>
+            <ComboBox fx:id="accountComboBox" prefHeight="32.0" prefWidth="125.0" style="-fx-border-color: black; -fx-border-radius: 3;">
+               <HBox.margin>
+                  <Insets left="12.0" right="12.0" />
+               </HBox.margin>
+            </ComboBox>
+            <Button fx:id="addAccountBtn" mnemonicParsing="false" onAction="#addPressed" prefHeight="32.0" prefWidth="32.0" style="-fx-border-color: black; -fx-border-radius: 3;" text="+" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+               <HBox.margin>
+                  <Insets left="12.0" right="12.0" />
+               </HBox.margin>
+               <font>
+                  <Font name="Roboto Bold" size="15.0" />
+               </font>
             </Button>
          </children>
       </HBox>
-      <FlowPane layoutY="70.0" prefHeight="431.0" prefWidth="700.0">
+      <Pane layoutY="51.0" prefHeight="549.0" prefWidth="800.0">
          <children>
-            <Label fx:id="welcomeLabel" prefHeight="30.0" prefWidth="215.0" text="Label">
-               <FlowPane.margin>
-                  <Insets left="25.0" top="25.0" />
-               </FlowPane.margin>
+            <PieChart fx:id="expensesPie" layoutX="320.0" layoutY="106.0" prefHeight="430.0" prefWidth="462.0" />
+            <Label fx:id="welcomeLabel" layoutX="14.0" layoutY="14.0" prefHeight="30.0" prefWidth="521.0">
+               <font>
+                  <Font name="Roboto Regular" size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="totExpensesLabel" layoutX="14.0" layoutY="97.0" prefHeight="30.0" prefWidth="283.0">
+               <font>
+                  <Font name="Roboto Regular" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="welcomeLabel11" layoutX="14.0" layoutY="156.0" prefHeight="30.0" prefWidth="215.0">
                <font>
                   <Font name="Roboto Regular" size="20.0" />
                </font>
             </Label>
          </children>
-      </FlowPane>
+      </Pane>
    </children>
 </AnchorPane>
