--- a/src/main/resources/com/app/project1/login.fxml
+++ b/src/main/resources/com/app/project1/login.fxml
@@ -1,76 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<AnchorPane prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;"
-            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.app.project1.LoginController">
-    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="83.0" layoutY="51.0" text="FINANCE MANAGER"
-           textAlignment="CENTER" textFill="#2a292e">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.app.project1.LoginController">
+    <Label alignment="CENTER" contentDisplay="CENTER" layoutX="83.0" layoutY="51.0" text="FINANCE MANAGER" textAlignment="CENTER" textFill="#2a292e">
         <font>
-            <Font name="Roboto Bold" size="48.0"/>
+            <Font name="Roboto Bold" size="48.0" />
         </font>
     </Label>
 
     <VBox alignment="CENTER" layoutX="94.0" layoutY="110.0">
-        <TextField fx:id="emailField" prefHeight="70.0" prefWidth="390.0" promptText="Enter email"
-                   style="-fx-border-color: black; -fx-border-radius: 3;">
+        <TextField fx:id="emailField" prefHeight="70.0" prefWidth="390.0" promptText="Enter email" style="-fx-border-color: black; -fx-border-radius: 3;">
             <font>
-                <Font name="Roboto Regular" size="20.0"/>
+                <Font name="Roboto Regular" size="20.0" />
             </font>
             <opaqueInsets>
-                <Insets/>
+                <Insets />
             </opaqueInsets>
             <padding>
-                <Insets left="10.0"/>
+                <Insets left="10.0" />
             </padding>
             <VBox.margin>
-                <Insets bottom="15.0" left="10.0" right="10.0" top="15.0"/>
+                <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
             </VBox.margin>
         </TextField>
-        <PasswordField fx:id="passwordField" prefHeight="70.0" prefWidth="390.0" promptText="Enter password"
-                       style="-fx-border-color: black; -fx-border-radius: 3;">
+        <PasswordField fx:id="passwordField" prefHeight="70.0" prefWidth="390.0" promptText="Enter password" style="-fx-border-color: black; -fx-border-radius: 3;">
             <font>
-                <Font name="Roboto Regular" size="20.0"/>
+                <Font name="Roboto Regular" size="20.0" />
             </font>
             <opaqueInsets>
-                <Insets/>
+                <Insets />
             </opaqueInsets>
             <padding>
-                <Insets left="10.0"/>
+                <Insets left="10.0" />
             </padding>
             <VBox.margin>
-                <Insets bottom="15.0" left="10.0" right="10.0" top="15.0"/>
+                <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
             </VBox.margin>
         </PasswordField>
         <Label fx:id="errorLabel" textFill="#690303">
         <font>
-            <Font name="Roboto Regular" size="12.0"/>
+            <Font name="Roboto Regular" size="12.0" />
         </font>
         </Label>
-        <Button fx:id="loginBtn" alignment="CENTER" contentDisplay="CENTER" onAction="#processLogin" prefHeight="79.0"
-                prefWidth="128.0" style="-fx-background-color: #2a292e; -fx-background-radius: 3;" text="LOGIN"
-                textAlignment="CENTER" textFill="WHITE">
+        <Button fx:id="loginBtn" alignment="CENTER" contentDisplay="CENTER" onAction="#processLogin" onKeyPressed="#processLogin" prefHeight="79.0" prefWidth="128.0" style="-fx-background-color: #2a292e; -fx-background-radius: 3;" text="LOGIN" textAlignment="CENTER" textFill="WHITE">
             <font>
-                <Font name="Roboto Bold" size="30.0"/>
+                <Font name="Roboto Bold" size="30.0" />
             </font>
             <cursor>
-                <Cursor fx:constant="HAND"/>
+                <Cursor fx:constant="HAND" />
             </cursor>
             <VBox.margin>
-                <Insets bottom="5.0" left="10.0" right="10.0" top="10.0"/>
+                <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
             </VBox.margin>
         </Button>
-        <Hyperlink fx:id="registerLink" alignment="CENTER" contentDisplay="CENTER" onAction="#registerRedirect"
-                   text="CREATE NEW ACCOUNT" textAlignment="CENTER" textFill="#161818">
+        <Hyperlink fx:id="registerLink" alignment="CENTER" contentDisplay="CENTER" onAction="#registerRedirect" text="CREATE NEW ACCOUNT" textAlignment="CENTER" textFill="#161818">
             <font>
-                <Font name="Roboto Bold" size="12.0"/>
+                <Font name="Roboto Bold" size="12.0" />
             </font>
             <VBox.margin>
-                <Insets bottom="15.0" top="10.0"/>
+                <Insets bottom="15.0" top="10.0" />
             </VBox.margin>
         </Hyperlink>
     </VBox>
