--- a/src/main/resources/com/app/project1/register.fxml
+++ b/src/main/resources/com/app/project1/register.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -92,6 +91,17 @@
                     <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                 </VBox.margin>
             </Button>
+         <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#loginPressed" text="LOG IN" textFill="#2a292e">
+            <font>
+               <Font name="Roboto Bold" size="16.0" />
+            </font>
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin>
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor>
+         </Button>
         </VBox>
     </children>
 </AnchorPane>
