--- a/src/main/resources/com/app/project1/budgets.fxml
+++ b/src/main/resources/com/app/project1/budgets.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,67 +11,149 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.ComboBox?>
-<?import java.lang.String?>
-<?import javafx.scene.control.TextField?>
 <AnchorPane prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.app.project1.BudgetsController">
 
     <VBox alignment="CENTER_LEFT" spacing="5">
-        <Label style="-fx-font-size: 18px;" text="Budget Overview" />
-        <HBox spacing="10">
-            <Label text="Budget Period:" />
-            <Label text="Start Date: 01/01/2024" />
-            <Label text="End Date: 12/31/2024" />
+        <HBox>
+            <children>
+                <Button fx:id="backBtn" alignment="CENTER" mnemonicParsing="false" onAction="#backPressed" style="-fx-background-color: #2a292e;" text="BACK TO DASHBOARD" textFill="WHITE">
+                    <HBox.margin>
+                        <Insets left="5.0" />
+                    </HBox.margin>
+                    <font>
+                        <Font name="Roboto Regular" size="13.0" />
+                    </font>
+                </Button>
+                <Label alignment="CENTER" contentDisplay="CENTER" text="Please choose account">
+                    <HBox.margin>
+                        <Insets left="10.0" top="5.0" />
+                    </HBox.margin>
+                    <font>
+                        <Font name="Roboto Regular" size="15.0" />
+                    </font>
+                </Label>
+                <ComboBox fx:id="accountSelector" prefWidth="150.0" style="-fx-background-color: #2a292e;">
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </ComboBox>
+                <Button fx:id="refreshBtn" alignment="CENTER" mnemonicParsing="false" onAction="#refreshPressed" style="-fx-background-color: #2a292e;" text="REFRESH" textFill="WHITE">
+                    <font>
+                        <Font name="Roboto Regular" size="13.0" />
+                    </font>
+                    <HBox.margin>
+                        <Insets left="25.0" />
+                    </HBox.margin>
+                </Button>
+            </children>
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
         </HBox>
-        <HBox spacing="10">
-            <Label text="Total Budget Amount: $10,000" />
-            <Label text="Remaining Budget: $8,000" />
-        </HBox>
-        <Label style="-fx-font-size: 16px;" text="Budget Categories" />
       <Separator prefWidth="200.0" />
-        <Label style="-fx-font-size: 16px;" text="Budget Transactions" />
-      <HBox alignment="CENTER" prefWidth="1000.0">
+        <HBox spacing="10">
+            <Label text="Budget Period:">
+                <font>
+                    <Font name="Roboto Regular" size="12.0" />
+                </font>
+                <padding>
+                    <Insets top="7.0" />
+                </padding>
+            <HBox.margin>
+               <Insets left="5.0" />
+            </HBox.margin>
+            </Label>
+            <Label text="Start Date:">
+                <font>
+                    <Font name="Roboto Regular" size="12.0" />
+                </font>
+                <padding>
+                    <Insets top="7.0" />
+                </padding>
+            </Label>
+            <DatePicker fx:id="startDateLabel" />
+            <Label text="End Date:">
+                <font>
+                    <Font name="Roboto Regular" size="12.0" />
+                </font>
+                <padding>
+                    <Insets top="7.0" />
+                </padding>
+            </Label>
+            <DatePicker fx:id="endDateLabel" />
+         <VBox.margin>
+            <Insets top="2.0" />
+         </VBox.margin>
+        </HBox>
+      <Separator prefWidth="200.0" />
+        <HBox spacing="10">
+            <Label fx:id="totBudgetAmountLabel" text="Total Budget Amount:">
+                <font>
+                    <Font name="Roboto Regular" size="12.0" />
+                </font>
+            <HBox.margin>
+               <Insets left="5.0" />
+            </HBox.margin>
+            </Label>
+            <Label fx:id="remainingBudgetAmountLabel" text="Remaining Budget:">
+                <font>
+                    <Font name="Roboto Regular" size="12.0" />
+                </font>
+            </Label>
+        </HBox>
+        <Separator prefWidth="200.0" />
+      <HBox>
+         <VBox.margin>
+            <Insets left="5.0" />
+         </VBox.margin>
          <children>
-              <TableView prefWidth="500.0">
-                  <!-- Define Table Columns -->
-                  <columns>
-                      <TableColumn text="Category Name" />
-                      <TableColumn text="Budgeted Amount" />
-                      <TableColumn text="Actual Expenses" />
-                      <TableColumn text="Remaining Budget" />
-                  </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-              </TableView>
-              <TableView prefWidth="500.0">
-                  <!-- Define Table Columns -->
-                  <columns>
-                      <TableColumn text="Transaction ID" />
-                      <TableColumn text="Description" />
-                      <TableColumn text="Date" />
-                      <TableColumn text="Category" />
-                      <TableColumn text="Amount" />
-                  </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-              </TableView>
+              <Label style="-fx-font-size: 16px;" text="Budget Transactions" />
+            <Button fx:id="addBdgt" alignment="CENTER" mnemonicParsing="false" onAction="#addBudgetPressed" style="-fx-background-color: #2a292e;" text="ADD BUDGET" textFill="WHITE">
+               <font>
+                  <Font name="Roboto Regular" size="13.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="15.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
-        <VBox spacing="10">
-            <Label text="Budget Settings" style="-fx-font-size: 16px;"/>
-            <GridPane hgap="10" vgap="5">
-                <Label text="Budget Period:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                <Label text="Alert Threshold:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-            </GridPane>
-        </VBox>
+      <Separator prefWidth="200.0" />
+        <HBox alignment="CENTER" prefWidth="1000.0">
+            <children>
+                <TableView fx:id="budgetTable" prefWidth="500.0">
+                    <!-- Define Table Columns -->
+                    <columns>
+                        <TableColumn fx:id="catNameCol" text="Category Name" />
+                        <TableColumn fx:id="budgetedAmountCol" text="Budgeted Amount" />
+                        <TableColumn fx:id="budgetExpensesCol" text="Actual Expenses" />
+                        <TableColumn fx:id="remainingBudgetCol" text="Remaining Budget" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+                <Separator orientation="VERTICAL" prefHeight="200.0" />
+                <TableView fx:id="budgetTransactionsTable" prefWidth="500.0">
+                    <!-- Define Table Columns -->
+                    <columns>
+                        <TableColumn fx:id="transactionIDCol" text="Transaction ID" />
+                        <TableColumn fx:id="transactionDescCol" text="Description" />
+                        <TableColumn fx:id="transactionDateCol" text="Date" />
+                        <TableColumn fx:id="transactionCatCol" text="Category" />
+                        <TableColumn fx:id="transactionAmountCol" text="Amount" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </children>
+        </HBox>
     </VBox>
-   <padding>
-      <Insets bottom="3.0" left="3.0" top="3.0" />
-   </padding>
+    <padding>
+        <Insets left="5.0" top="5.0" />
+    </padding>
 
 </AnchorPane>
