--- a/src/main/resources/com/app/project1/login.fxml
+++ b/src/main/resources/com/app/project1/login.fxml
@@ -52,7 +52,7 @@
             <Font name="Roboto Regular" size="12.0" />
         </font>
         </Label>
-        <Button fx:id="loginBtn" alignment="CENTER" contentDisplay="CENTER" onAction="#processLogin" onKeyPressed="#processLogin" prefHeight="79.0" prefWidth="128.0" style="-fx-background-color: #2a292e; -fx-background-radius: 3;" text="LOGIN" textAlignment="CENTER" textFill="WHITE">
+        <Button fx:id="loginBtn" alignment="CENTER" contentDisplay="CENTER" onAction="#processLogin" prefHeight="79.0" prefWidth="128.0" style="-fx-background-color: #2a292e; -fx-background-radius: 3;" text="LOGIN" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font name="Roboto Bold" size="30.0" />
             </font>
