--- a/src/main/resources/com/app/project1/register.fxml
+++ b/src/main/resources/com/app/project1/register.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -91,17 +92,14 @@
                     <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                 </VBox.margin>
             </Button>
-         <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#loginPressed" text="LOG IN" textFill="#2a292e">
+         <Hyperlink fx:id="loginBtn" onAction="#loginPressed" text="LOG IN">
             <font>
                <Font name="Roboto Bold" size="16.0" />
             </font>
-            <VBox.margin>
-               <Insets top="5.0" />
-            </VBox.margin>
-            <cursor>
-               <Cursor fx:constant="HAND" />
-            </cursor>
-         </Button>
+            <padding>
+               <Insets top="10.0" />
+            </padding>
+         </Hyperlink>
         </VBox>
     </children>
 </AnchorPane>
