--- a/src/main/resources/com/app/project1/budgets.fxml
+++ b/src/main/resources/com/app/project1/budgets.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.app.project1.BudgetsController">
+<AnchorPane prefHeight="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.app.project1.BudgetsController">
 
     <VBox alignment="CENTER_LEFT" spacing="5">
         <HBox>
@@ -118,18 +118,27 @@
                   <Insets left="15.0" />
                </HBox.margin>
             </Button>
+            <Button fx:id="deleteBdgt" alignment="CENTER" mnemonicParsing="false" onAction="#deleteBudgetPressed" style="-fx-background-color: #2a292e;" text="DELETE BUDGET" textFill="WHITE">
+               <font>
+                  <Font name="Roboto Regular" size="13.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="15.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
       <Separator prefWidth="200.0" />
         <HBox alignment="CENTER" prefWidth="1000.0">
             <children>
-                <TableView fx:id="budgetTable" prefWidth="500.0">
+                <TableView fx:id="budgetTable" prefWidth="700.0">
                     <!-- Define Table Columns -->
                     <columns>
-                        <TableColumn fx:id="catNameCol" text="Category Name" />
-                        <TableColumn fx:id="budgetedAmountCol" text="Budgeted Amount" />
-                        <TableColumn fx:id="budgetExpensesCol" text="Actual Expenses" />
-                        <TableColumn fx:id="remainingBudgetCol" text="Remaining Budget" />
+                        <TableColumn fx:id="catNameCol" prefWidth="126.39999085664749" text="Category Name" />
+                        <TableColumn fx:id="budgetedAmountCol" prefWidth="131.2000274658203" text="Budgeted Amount" />
+                        <TableColumn fx:id="budgetExpensesCol" prefWidth="125.60002136230469" text="Actual Expenses" />
+                        <TableColumn fx:id="remainingBudgetCol" prefWidth="112.800048828125" text="Remaining Budget" />
+                  <TableColumn fx:id="monthCol" prefWidth="78.4000244140625" text="Month" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -139,7 +148,7 @@
                 <TableView fx:id="budgetTransactionsTable" prefWidth="500.0">
                     <!-- Define Table Columns -->
                     <columns>
-                        <TableColumn fx:id="transactionIDCol" text="Transaction ID" />
+                        <TableColumn fx:id="transactionIDCol" text="ID" />
                         <TableColumn fx:id="transactionDescCol" text="Description" />
                         <TableColumn fx:id="transactionDateCol" text="Date" />
                         <TableColumn fx:id="transactionCatCol" text="Category" />
